Fix padding on home page on mobile

--- a/resources/public/stylesheets/homer.css
+++ b/resources/public/stylesheets/homer.css
@@ -1,6 +1,7 @@
 body {
     max-width: 900px;
     margin: 0 auto;
+    padding: 10px;
 }
 
 .wwwf {
